@@ -1,5 +1,6 @@
 Revision history for DBIx-Class-Helpers
 
+       - Add seal method to clean SQL namespace
        - Add methods to generate has_many and many_to_many fo join tables
        - Hopefully fix deps for real
 
